tests/src/frontend/typechecking/exhaustiveness/invalid/const_pattern2.sk
// exhaustiveness checking should read through constant initializers
const MyString: String = MyOtherString;
const MyOtherString: String = "HEY";

fun shouldFail(x: String): String {
  x match {
  | MyString -> "Pass\n"
  | MyOtherString -> "Fail\n"
  | _ -> "Fail\n"
  }
}
